--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>my-goal-assignment</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+      </style>
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+      </style>
 </head>
-<body>
-    <div class="first-part">
 
+<body>
+    <div class="first">
+        <div class="first-part-one">
+            <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
+            <button>Shop Now</button>
+        </div>
+        <div class="first-part-two">
+            <img src="Images/Flower Asset/pngwing 10.png" width="70%">
+        </div>
     </div>
     <div class="second-part">
-
     </div>
 </body>
+
 </html>
