--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
             <img src="Images/Flower Asset/pngwing 10.png" width="70%">
         </div>
     </div>
+
     <div class="second-part">
+        <h2>Our Featured Flowers</h2>
+        <p>It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout.</p>
+            <div class="second-part-pro">
+                <div class="second-box-1">
+                    <img src="Images/Flower Asset/pngwing 6.png" width="80%" draggable="false">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+                <div class="second-box-2">
+                    <img src="Images/Flower Asset/pngwing 5.png" width="80%" draggable="false">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+                <div class="second-box-3">
+                    <img src="Images/Flower Asset/pngwing 7.png" width="80%" draggable="false">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+            </div>
     </div>
 </body>
 
