--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <title>my-goal-assignment</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
-      </style>
-      <style>
+    </style>
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-      </style>
+    </style>
 </head>
 
 <body>
     <div class="first">
         <div class="first-part-one">
             <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal
+                distribution of letters.</p>
             <button>Shop Now</button>
         </div>
         <div class="first-part-two">
@@ -30,20 +32,34 @@
         <h2>Our Featured Flowers</h2>
         <p>It is a long established fact that a reader will be distracted by the readable <br>
             content of a page when looking at its layout.</p>
-            <div class="second-part-pro">
-                <div class="second-box-1">
-                    <img src="Images/Flower Asset/pngwing 6.png" width="80%" draggable="false">
-                    <h4>Pink Flower Tree</h4>
-                </div>
-                <div class="second-box-2">
-                    <img src="Images/Flower Asset/pngwing 5.png" width="80%" draggable="false">
-                    <h4>Pink Flower Tree</h4>
-                </div>
-                <div class="second-box-3">
-                    <img src="Images/Flower Asset/pngwing 7.png" width="80%" draggable="false">
-                    <h4>Pink Flower Tree</h4>
-                </div>
+        <div class="second-part-pro">
+            <div class="second-box-1">
+                <img src="Images/Flower Asset/pngwing 6.png" width="80%" draggable="false">
+                <h4>Pink Flower Tree</h4>
             </div>
+            <div class="second-box-2">
+                <img src="Images/Flower Asset/pngwing 5.png" width="80%" draggable="false">
+                <h4>Pink Flower Tree</h4>
+            </div>
+            <div class="second-box-3">
+                <img src="Images/Flower Asset/pngwing 7.png" width="80%" draggable="false">
+                <h4>Pink Flower Tree</h4>
+            </div>
+        </div>
+    </div>
+
+    <div class="third-part">
+        <div class="third-part-1">
+            <h2>Hot Deal ! Sale Up To 25% Off</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout.</p>
+            <button>Shop Now</button>
+        </div>
+        <div class="third-part-2">
+            <img src="Images/Flower Asset/pngwing 8.png" alt="" srcset="">
+        </div>
+
+
     </div>
 </body>
 
