--- a/index.html
+++ b/index.html
@@ -50,16 +50,25 @@
 
     <div class="third-part">
         <div class="third-part-1">
-            <h2>Hot Deal ! Sale Up To 25% Off</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable
+            <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+            <p>It is a long established fact that a reader will be distracted by the readable <br>
                 content of a page when looking at its layout.</p>
-            <button>Shop Now</button>
+            <button>Sign Up</button>
         </div>
         <div class="third-part-2">
-            <img src="Images/Flower Asset/pngwing 8.png" alt="" srcset="">
+            <img src="Images/Flower Asset/pngwing 8.png" width="70%">
         </div>
-
-
+    </div>
+    <div class="forth-part">
+        <h1>Instagram</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout</p>
+        <div class="forth-part-pro">
+            <img src="Images/Flower Asset/Flower 01.png" alt="" srcset="">
+            <img src="Images/Flower Asset/Rectangle 4.png" alt="" srcset="">
+            <img src="Images/Flower Asset/Rectangle 5.png" alt="" srcset="">
+            <img src="Images/Flower Asset/Rectangle 6.png" alt="" srcset="">
+        </div>
     </div>
 </body>
 
