--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         </div>
     </div>
     <div class="forth-part">
-        <h1>Instagram</h1>
+        <h2>Instagram</h2>
         <p>It is a long established fact that a reader will be distracted by the readable <br>
             content of a page when looking at its layout</p>
         <div class="forth-part-pro">
-            <img src="Images/Flower Asset/Flower 01.png" alt="" srcset="">
-            <img src="Images/Flower Asset/Rectangle 4.png" alt="" srcset="">
-            <img src="Images/Flower Asset/Rectangle 5.png" alt="" srcset="">
-            <img src="Images/Flower Asset/Rectangle 6.png" alt="" srcset="">
+            <img src="Images/Flower Asset/Flower 01.png" width="30%">
+            <img src="Images/Flower Asset/Rectangle 4.png" width="30%">
+            <img src="Images/Flower Asset/Rectangle 5.png" width="30%">
+            <img src="Images/Flower Asset/Rectangle 6.png" width="30%">
         </div>
     </div>
 </body>
