--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
             <img src="Images/Flower Asset/Rectangle 6.png" width="30%">
         </div>
     </div>
+
+    <div class="fivth-part">
+        <div class="fivth-part-text">
+              <h2>Get The Latest Deals</h2>
+        <p>$30 coupon for first shopping</p>
+        <div class="fivth-part-pro">
+            <input type="text" placeholder="Enter your email here....">
+            <button>Subscribe</button>
+        </div>
+        </div>
+      
+    </div>
 </body>
 
 </html>
