--- a/index.html
+++ b/index.html
@@ -73,15 +73,25 @@
 
     <div class="fivth-part">
         <div class="fivth-part-text">
-              <h2>Get The Latest Deals</h2>
-        <p>$30 coupon for first shopping</p>
-        <div class="fivth-part-pro">
-            <input type="text" placeholder="Enter your email here....">
-            <button>Subscribe</button>
+            <h2>Get The Latest Deals</h2>
+            <p>$30 coupon for first shopping</p>
+            <div class="fivth-part-pro">
+                <input type="text" placeholder="Enter your email here....">
+                <button>Subscribe</button>
+            </div>
         </div>
-        </div>
-      
     </div>
+
+    <div class="sixth-part">
+        <h1>Why flower is colourful?</h1>
+        <div class="sixth-part-pro"></div>
+        <li> <a href=""><ion-icon name="chevron-down-outline"></ion-icon></a> Flowers are brightly coloured in order to attract insects for pollination.</li>
+        <li> <a href=""><ion-icon name="chevron-down-outline"></ion-icon></a> Plants gain their coloration from the way that pigments within their cells interact with sunlight.</li>
+        <li> <a href=""><ion-icon name="chevron-down-outline"></ion-icon></a> simply a means of attracting much needed pollinators for flower pollination to occur.</li>
+        <button>Read More</button>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
