--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
         <li> <a href=""><ion-icon name="chevron-down-outline"></ion-icon></a> simply a means of attracting much needed pollinators for flower pollination to occur.</li>
         <button>Read More</button>
     </div>
+
+    <div class="seventh-part">
+        <h2><span>Flower</span>Shop</h2>
+        <p>It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout.</p>
+            <p class="footer">@2020-2023, FlowerShop.com. All rights reserved</p>
+    </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
